# zephyr-SiFli

./: .gitmodules  .version  CMakeLists.txt  Kconfig  README  README.md  west.yml
boards/: .gitignore  Kconfig  Kconfig.common  Kconfig.v2  Kconfig_drv  Kconfig_soc
boards/common/: SConscript
boards/ec-lb551xxx/: SConscript
boards/ec-lb555xxx/: SConscript
boards/ec-lb557xxx/: SConscript
boards/ec-lb561xxx/: Kconfig  SConscript
boards/ec-lb563xxx/: Kconfig  SConscript
boards/ec-lb567/: Kconfig.board  SConscript  ptab.json
boards/ec-lb583/: SConscript  ptab.json
boards/ec-lb585/: SConscript  ptab.json
boards/ec-lb587/: SConscript  ptab.json
boards/eh-lb520/: SConscript  ptab.json
boards/eh-lb520S/: Kconfig.board  SConscript  ptab.json
boards/eh-lb523/: SConscript  ptab.json
boards/eh-lb525/: SConscript  ptab.json
boards/eh-lb52xu/: Kconfig.board
boards/eh-lb551/: SConscript
boards/eh-lb555/: SConscript  ptab.json
boards/eh-lb561/: SConscript  ptab.json
boards/eh-lb563/: SConscript  ptab.json
boards/eh-lb56xu/: Kconfig.board
boards/eh-ss6500/: SConscript  ptab.json
boards/eh-ss6600xxx/: SConscript
boards/eh-ss6700/: SConscript  ptab.json
boards/pc/: Kconfig
drivers/: CMakeLists.txt  Kconfig  ipc_os_port.h
hal_sifli/: CMakeLists.txt
hal_sifli/drivers/: CMakeLists.txt
modules/: modules.cmake
scripts/: ImgBurnList.ini  sfflash.bat  sfrunner.py  sftool.py
soc/sifli/: CMakeLists.txt  Kconfig.soc
soc/sifli/sf32lb52x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.sf32lb520  Kconfig.defconfig.sf32lb523  Kconfig.defconfig.sf32lb527  Kconfig.soc  pinctrl_soc.h
zephyr/: module.yml
(+253 files in other folders)
